# loopbreaker

./: .gitignore  CMakeLists.txt  README.md
.cursor/rules/: specify-rules.mdc
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Analysis/: AnalysisEnums.h  AnalysisModels.cpp  AnalysisSnapshot.h  AudioFeatureExtractor.cpp  AudioFeatureExtractor.h  FeatureFrame.h  LoopAnalyzer.cpp  LoopAnalyzer.h  LoopMetrics.h  Suggestion.h  SuggestionEngine.cpp  SuggestionEngine.h
docs/: PROJECT_MEMORY.md
specs/001-loopbreaker-v01/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-loopbreaker-v01/checklists/: requirements.md  spec-quality.md
specs/001-loopbreaker-v01/contracts/: thread_handoff.md
specs/001-loopbreaker-v01/qa/: negative-matrix.md  staticness-thresholds.md
tests/: LoopBreakerAnalysisTests.cpp
tests/fixtures/: README.md
